# bezzabot

./: .dockerignore  .env-example  .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: deploy.yml
docker/scripts/: entrypoint-helpers.sh
scripts/: backup.sh  build.sh  deploy.sh
src/: command.rs  error.rs  lib.rs  listener.rs  main.rs
src/command/: datetime_from_unix.rs  encdec.rs  mod.rs  radix.rs  switch_keyboard.rs  tracking.rs  transform.rs  winner.rs
src/command/handler/: decode_handler.rs  encode_handler.rs  help_handler.rs  jp_handler.rs  mod.rs  qr_handler.rs  radix_handler.rs  switch_keyboard_handler.rs  tracking_handler.rs  transform_handler.rs  unixtime_handler.rs  winner_handler.rs
src/command/parser/: encdec_parser.rs  mod.rs  radix_parser.rs  switch_keyboard_parser.rs  tracking_parser.rs  transform_parser.rs  winner_parser.rs
src/command/tracking/: post_ru.rs
src/model/: markers.rs  mod.rs  tracking.rs
tests/: serde_json.rs
