[package]
name = "bezzabot"
version = "0.1.2"
edition = "2021"
keywords = ["teloxide", "telegram", "telegram-bot", "bot", "raspberry pi", "educational", "pet-project"]
categories = ["web-programming", "asynchronous"]

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[dependencies]
teloxide = { version = "0.12", features = ["macros", "rand", "webhooks-axum"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
dotenv = "0.15.0"
chrono = "0.4"
# async-process = "1.6.0" run command from cli in async mode
openssl = { version = "0.10.45", default-features = false, features = ["vendored"] }
openssl-probe = "0.1.5"
rand = "0.8.5"
base64 = "0.21.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_derive = "1.0"
qrcode-generator = "4.1.7"
url = "2.4.0"
reqwest = "0.11.18"
scraper = "0.17.1"
prettytable-rs = "0.10.0"
